# Zemni

./: CMakeLists.txt  README.md
CMakeModules/: caf-config.cmake  folly-config.cmake  snappy-config.cmake  zeromq-config.cmake
src/: CMakeLists.txt  Common.h  Config.h  NodeProxy.h  Queue.h  QueueProxy.h  QueueType.h  Queue_folly.h  Queue_moodycamel.h  Queue_network_sender.h  ResetQueueListener.h  ZemniNodeManager.cpp  ZemniNodeManager.h  ZemniScheduler.cpp  ZemniScheduler.h
src/cppzmq/: zmq.hpp
src/message/: Queue.pb.cc  Queue.pb.h  Queue.proto  StreamElement.pb.cc  StreamElement.pb.h  StreamElement.proto  ZemniNodeManagerMsgActor.cpp  ZemniNodeManagerMsgActor.h  ZemniSchedulerMsgActor.cpp  ZemniSchedulerMsgActor.h
src/network/: DataStream.h  NetworkManager.cpp  NetworkManager.h  NetworkReceiver.h  NetworkSender.cpp  NetworkSender.h
src/queue/: blockingconcurrentqueue.h
src/util/: AtomicAvgCounter.h  AtomicWrapper.h  AvgCounter.h  CAFUtil.h  NTPClient.h
src/util/spinlock/: Atomic.h  Cycles.cpp  Cycles.h  Fence.h  Initialize.h  Minimal.h  SpinLock.cpp  SpinLock.h
test/: CMakeLists.txt  Manager.cpp  Worker.cpp  test.cpp
