
ADD_EXECUTABLE(${PROG}_test test.cpp)

#ADD_EXECUTABLE(RunWorker Worker.cpp)
#ADD_EXECUTABLE(RunManager Manager.cpp)
#
TARGET_LINK_LIBRARIES(${PROG}_test app_core)
#TARGET_LINK_LIBRARIES(RunWorker app_core)
#TARGET_LINK_LIBRARIES(RunManager app_core)

TARGET_LINK_LIBRARIES(${PROG}_test ${GLOG_LIBRARIES})
TARGET_LINK_LIBRARIES(${PROG}_test ${FOLLY_LIBRARIES})
TARGET_LINK_LIBRARIES(${PROG}_test ${OPENSSL_LIBRARYS})
TARGET_LINK_LIBRARIES(${PROG}_test ${CAF_LIBRARIES})
TARGET_LINK_LIBRARIES(${PROG}_test ${Protobuf_LIBRARIES})
TARGET_LINK_LIBRARIES(${PROG}_test ${ZEROMQ_LIBRARIES})
TARGET_LINK_LIBRARIES(${PROG}_test ${SNAPPY_LIBRARIES})
#TARGET_LINK_LIBRARIES(${PROG}_test ${GFLAGS_LIBRARIES})

#TARGET_LINK_LIBRARIES(RunWorker ${GLOG_LIBRARIES})
#TARGET_LINK_LIBRARIES(RunWorker ${FOLLY_LIBRARIES})
#TARGET_LINK_LIBRARIES(RunWorker ${OPENSSL_LIBRARYS})
#TARGET_LINK_LIBRARIES(RunWorker ${CAF_LIBRARIES})
#TARGET_LINK_LIBRARIES(RunWorker ${Protobuf_LIBRARIES})
#TARGET_LINK_LIBRARIES(RunWorker ${ZEROMQ_LIBRARIES})
#TARGET_LINK_LIBRARIES(RunWorker ${SNAPPY_LIBRARIES})
#
#TARGET_LINK_LIBRARIES(RunManager ${GLOG_LIBRARIES})
#TARGET_LINK_LIBRARIES(RunManager ${FOLLY_LIBRARIES})
#TARGET_LINK_LIBRARIES(RunManager ${OPENSSL_LIBRARYS})
#TARGET_LINK_LIBRARIES(RunManager ${CAF_LIBRARIES})
#TARGET_LINK_LIBRARIES(RunManager ${Protobuf_LIBRARIES})
#TARGET_LINK_LIBRARIES(RunManager ${ZEROMQ_LIBRARIES})
#TARGET_LINK_LIBRARIES(RunManager ${SNAPPY_LIBRARIES})
